# COMMON-GROUND

./: .claudeignore  .dockerignore  .env.secrets.enc  .gitignore  .mcp.json  .sops.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
.claude/: launch.json
.claude/rules/: data-exploration-workflow.md
.dg/: telemetry.yaml
.dlt/: config.toml
.planning/: ROADMAP.md  STATE.md
.planning/audits/: INNOVATION-ROADMAP.md  platform-architecture.md
.planning/plans/: cg-platform-roadmap.md  cg-subscription-parser-design.md  cg-telegram-bot-architecture.md
data/: catalog_comments.yaml  non_socrata_comments.yaml
docs/: ARCHITECTURE.md  BETA-LAUNCH-RUNBOOK.md  LOGINS.md
docs/adr/: 0001-dagster-in-docker.md  0002-ducklake-catalog-convention.md  0003-dlt-removal.md  0004-hnsw-acorn-over-lance.md  0005-splink-entity-resolution.md  0006-fastmcp-for-rest.md  0007-sqlglot-mosaic-validator.md  0008-cursor-pool.md  0009-git-deploy-over-rsync.md  0010-minio-removal.md
docs/evals/: baseline_2026-04-08.json
docs/runbooks/: deploy-dagster.md  eval-harness.md  (+4 more)
infra/: deploy.sh  hetzner-docker-compose.yml  init-db.sql
memory/: MEMORY.md  ducklake_catalog_convention.md  embedder_oom.md  eval_harness.md  graph_assets_architecture.md  hpd_violations_parquet_orphans.md  mcp_cursor_pool.md  network_political_sources.md  symlink_deploy_flow.md  tool_parameter_literals.md
models/: splink_model.json  splink_model_v2.json
patches/: dagster_dlt_null_normalize.py  duckdb_nullable_add_column.py
scripts/: apply_comments.py  backfill_row_counts.py  batch_resolve_entities.py  check_loads.py  dedup_ccrb.py  dedup_isolated.py  dedup_isolated2.py  dedup_one.py  dedup_tables.py  find_doubled.py  find_dupes.py  generate_comments.py  ingest_acs_zcta.py  ingest_courtlistener.py  ingest_new_datasets.py  investigate_angelyniauk.py  materialize_name_index.py  migrate_cursors.py  migrate_cursors_container.py  test_apply_comments.py  test_comments.py  train_splink_model.py
tests/: AGENTS.md  test_address_lookup.py  test_datasets.py  test_ducklake_resource.py  test_entity.py  test_entity_master.py  test_fetcher.py  test_foundation_assets.py  test_freshness_sensor.py  test_name_tokens.py  test_socrata_ingestion.py  test_spatial.py  test_splink_model.py  test_splink_model_integrity.py  test_writer.py
(+299 files in other folders)
