[project]
name = "dagster_pipeline"
description = "Common Ground data pipeline — Dagster + DuckLake (direct DuckDB ingestion)"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.19",
    "duckdb==1.5.2",  # upgraded for DuckLake 1.0 (bucket partitioning, geometry stats, data inlining)
    "ducklake>=0.1.0",
    "httpx>=0.27",
    "pyarrow>=18.0",
    "tenacity>=9.0",
    "psutil>=5.9",
    "orjson>=3.11.7",
    "dagster-docker>=0.28.0",
    "dagster-postgres>=0.28.0",
    "splink>=4.0",
    "google-genai>=1.69.0",
    "anthropic>=0.86.0",
]

[project.optional-dependencies]
ml = [
    "blockingpy>=0.1.0",
    "semhash>=0.1.0",
    "bertopic>=0.16.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
packages = ["src/dagster_pipeline"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_pipeline"
registry_modules = [
    "dagster_pipeline.components.*",
]
